python-test_driven_development/tests/0-add_integer.txt
>>> add = __import__("0-add_integer").add_integer

>>> add(2, 3)
5

>>> add("hi", 3)
Traceback (most recent call last):
TypeError: a must be an integer

>>> add()
Traceback (most recent call last):
  File "/Users/rahman/Downloads/holberton/Python/main.py", line 21, in <module>
    add_integer()
TypeError: add_integer() missing 1 required positional argument: 'a'

>>> add(2.1, 3)
5

>>> add(float('inf'), float('inf'))
Traceback (most recent call last):
  File "/Users/rahman/Downloads/holberton/Python/main.py", line 21, in <module>
    print(add_integer(float('inf'), float('inf')))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/rahman/Downloads/holberton/Python/main.py", line 19, in add_integer
    return int(a) + int(b)
           ^^^^^^
OverflowError: cannot convert float infinity to integer

>>> math = __import__("math")
>>> add_integer(math.nan, math.nan)
Traceback (most recent call last):
  File "/Users/rahman/Downloads/holberton/Python/main.py", line 21, in <module>
    print(add_integer(math.nan, math.nan))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/rahman/Downloads/holberton/Python/main.py", line 19, in add_integer
    return int(a) + int(b)
           ^^^^^^
ValueError: cannot convert float NaN to integer

